Attempting second production grade ci-cd

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   continuous-integration:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       # Step 1
       - uses: actions/checkout@v2
@@ -29,7 +29,7 @@ jobs:
       #  run: python app.py & pytest
 
   continuous-deployment:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [continuous-integration]
     if: github.ref == 'refs/heads/main'
     steps:
