--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,9 +22,12 @@ jobs:
       # Step 4
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        #with:
+          #aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
+          #aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
           #aws-region: ap-southeast-1
       # Step 5
       #- name: Build Application and Run unit Test
@@ -38,9 +41,12 @@ jobs:
      # Step 1
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        #with:
+          #aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
+          #aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
           #aws-region: us-east-2
      # Step 2
       - name: Create CodeDeploy Deployment
