--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_ACCESS_REGION }}
+          aws-region: us-east-2
         #with:
           #aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
           #aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -45,7 +45,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_ACCESS_REGION }}
+          aws-region: us-east-2
         #with:
           #aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
           #aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
