--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,10 @@ files:
    destination: /home/ubuntu/NewsEmotionsExtraction
 hooks:
   AfterInstall:
-   - location: /home/ubuntu/NewsEmotionsExtraction/install_app_dependencies
+   - location: ./install_app_dependencies
      timeout: 300
      runas: root
   ApplicationStart:
-   - location: /home/ubuntu/NewsEmotionsExtraction/start_server
+   - location: ./start_server
      timeout: 300
      runas: root
