--- a/appspec.yml
+++ b/appspec.yml
@@ -6,6 +6,7 @@ files:
 hooks:
   AfterInstall:
    - location: install_app_dependencies.sh
+     timeout: 30000000
      runas: root
   ApplicationStart:
    - location: start_server.sh
