--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,10 @@ files:
    destination: /home/ubuntu/NewsEmotionsExtraction
 hooks:
   AfterInstall:
-   - location: install_app_dependencies.sh
-     timeout: 30000000
+   - location: /home/ubuntu/NewsEmotionsExtraction/install_app_dependencies.sh
+     timeout: 300
      runas: root
   ApplicationStart:
-   - location: start_server.sh
+   - location: /home/ubuntu/NewsEmotionsExtraction/start_server.sh
      timeout: 300
      runas: root
