--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ Flask-SQLAlchemy==3.0.3
 Flask-Testing==0.8.1
 frozenlist==1.3.3
 greenlet==2.0.2
+gunicorn
 h11==0.14.0
 huggingface-hub==0.12.1
 idna==3.4
