--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -61,8 +61,8 @@ jobs:
         id: deploy
         run: |
           aws deploy create-deployment \
-            --application-name FlaskBackendCICD \
-            --deployment-group-name FlaskBackendCICDGroup \
+            --application-name FlaskBackendCICD2 \
+            --deployment-group-name FlaskBackendCICDGroup2 \
             --file-exists-behavior OVERWRITE \
             --deployment-config-name CodeDeployDefault.OneAtATime \
             --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
